# predraw

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml  selfdoc.json
.github/workflows/: ci.yml  publish.yml
.rlsbl/: config.json  hashes.json
.rlsbl/bases/: CLAUDE.md
.rlsbl/bases/.github/workflows/: ci.yml
.rlsbl/changes/: 0.1.0.jsonl  0.1.0.md  0.1.1.jsonl  0.1.1.md  0.1.2.jsonl  0.1.2.md  0.2.0.jsonl  0.2.0.md  0.2.1.jsonl  0.2.1.md  unreleased.jsonl
.rlsbl/hooks/: post-release.sh  pre-release.sh
docs/: index.md
examples/rlsbl-logo/: config.json  main.json
examples/rlsbl-social/: config.json  main.json
examples/rlsbl-social/components/: wordmark.json
predraw/: __init__.py  __main__.py  bbox.py  cli.py  fonts.py  loader.py  model.py  output.py  pipeline.py  renderer.py  validator.py
predraw/schema/: config.schema.json  scene.schema.json
schema/: scene.schema.json
tests/: test_predraw.py
todo/: animation-design.md
