[project]
name = "predraw"
version = "0.2.1"
keywords = ["svg", "render", "json", "declarative", "png", "webp", "pipeline", "text-to-paths", "rlsbl"]
description = "Declarative rendering pipeline: JSON in, SVG/PNG/WebP out"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.7",
    "fonttools>=4.62.1",
    "jsonschema>=4.20",
    "pillow>=10.0",
    "strictcli>=0.2.0",
]

[tool.uv.sources]
strictcli = { path = "../strictcli/python" }

[project.scripts]
predraw = "predraw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
